Add main menu image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
      <!-- Main menu section -->
      <section id="main-menu-section">
+        <div class="opaque-overlay">&nbsp;</div>
         <div class="container">
             <div class="row">
                 <div class="col-12 offset-md-2 col-md-8 offset-lg-3 col-lg-6">
@@ -29,8 +30,8 @@
                         </h1>
                         <div class="click" id="volume-up-menu"><i class="fas fa-volume-up fa-2x"></i></div>
                         <div class="row">
-                            <div class="offset-1 col-10">
-                                <div id="main-image"><img src="assets/images/myimage.png" alt="Title image for game" /></div>
+                            <div class="offset-1 col-5">
+                                <div id="main-image"><img src="/assets/images/horse.jpg" alt="Title image for game" /></div>
                             </div>
                         </div>
                         <div class="options">
