--- a/index.html
+++ b/index.html
@@ -43,10 +43,29 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        
+        </div>  
      </section>
+      <!-- Game level modal -->
+      <div class="modal fade" id="level-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body mx-auto">
+                    <h2>Select difficulty:</h2>
+                    <div class="level d-inline-block text-center click" id="easy" data-dismiss="modal">
+                        <h3 class="mt-4">Easy</h3>
+                        <p>8 cards</p>
+                    </div>
+                    <div class="level d-inline-block text-center click" id="hard" data-dismiss="modal">
+                        <h3 class="mt-4">Hard</h3>
+                        <p>16 cards</p>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger click" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
     
      <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="crossorigin="anonymous"></script>
