--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                         <div class="click" id="volume-up-menu"><i class="fas fa-volume-up fa-2x"></i></div>
                         <div class="row">
                             <div class="offset-1 col-5">
-                                <div id="main-image"><img src="/assets/images/horse.jpg" alt="Title image for game" /></div>
+                                <div id="main-image"><img src="/assets/images/pexeso.jpg" alt="Title image for game" /></div>
                             </div>
                         </div>
                         <div class="options">
-                            <button type="button" class="btn-block mx-auto p-4 mt-3 mb-3 click" id="play" data-toggle="modal" data-target="#level-modal">Play</button>
-                            <button type="button" class="btn-block mx-auto p-1 click" id="about" data-toggle="modal" data-target="#about-modal">About</button>
+                            <button type="button" class="btn-block mx-auto p-4 mt-3 mb-3 click" id="play" data-bs-toggle="modal" data-bs-target="#level-modal">Play</button>
+                            <button type="button" class="btn-block mx-auto p-1 click" id="about" data-bs-toggle="modal" data-bs-target="#about-modal">About</button>
                             <button type="button" class="btn-block mx-auto p-1 click" id="highscores" data-toggle="modal" data-target="#highscores-modal">Highscores</button>
                             <button type="button" class="btn-block mx-auto p-1 click" id="credits" data-toggle="modal" data-target="#credits-modal">Credits</button>
                         </div>
@@ -45,7 +45,7 @@
             </div>
         </div>  
      </section>
-      <!-- Game level modal -->
+      <!-- Game my level modal -->
       <div class="modal fade" id="level-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -53,11 +53,11 @@
                     <h2>Select difficulty:</h2>
                     <div class="level d-inline-block text-center click" id="easy" data-dismiss="modal">
                         <h3 class="mt-4">Easy</h3>
-                        <p>8 cards</p>
+                        <p>6 cards</p>
                     </div>
                     <div class="level d-inline-block text-center click" id="hard" data-dismiss="modal">
                         <h3 class="mt-4">Hard</h3>
-                        <p>16 cards</p>
+                        <p>12 cards</p>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -66,12 +66,47 @@
             </div>
         </div>
     </div>
+
+    <!--About Pexeso Game modal-->
+    <div class="modal fade" id="about-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h2>How to play Pexeso:</h2>
+                    <p>
+                        The aim of the game is to find all matching images character pairs before the time runs out. Click on a card to turn it over, then click on another one. If the two cards match, they will stay face-up. If the two
+                        cards do not match, they will return to being face-down.
+                    </p>
+                    <p>The game ends when all the cards have been matched in pairs before time finished</p>
+                    <h3>Scoring system:</h3>
+                    <p>Game will start with 0 points, score 50 points whenever you turn over cards that match and lose 20 points whenever they don't match.</p>
+                    <p class="m-0">Time remaining when all pairs matched will be added as bonus:</p>
+                    <ul>
+                        <li>Easy: 1 sec = 1 point</li>
+                        <li>Hard: 1 sec = 2 points</li>
+                    </ul>
+                    <div class="p-2" id="benefits">
+                        <h2>Benefits of playing memory games:</h2>
+                        <p class="m-0">
+                            Playing memory games can improve short-term memory as well as long-term memory. Memory games exercise the brain’s memory function. The key is to remember to play them regularly. Some benefits of memory games
+                            are preventing memory-related illnesses and enhancing other brain functions.
+                        </p>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger click" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     
      <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="crossorigin="anonymous"></script>
      <!-- Bootstrap JavaScript file  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
      <!-- JavaScript file -->
-     <script src="assets/js/js/script.js"></script>
+     <script src="assets/js/js/app.js"></script>
 </body>
 </html>
