--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                         <div class="options">
                             <button type="button" class="btn-block mx-auto p-4 mt-3 mb-3 click" id="play" data-bs-toggle="modal" data-bs-target="#level-modal">Play</button>
                             <button type="button" class="btn-block mx-auto p-1 click" id="about" data-bs-toggle="modal" data-bs-target="#about-modal">About</button>
-                            <button type="button" class="btn-block mx-auto p-1 click" id="highscores" data-toggle="modal" data-target="#highscores-modal">Highscores</button>
-                            <button type="button" class="btn-block mx-auto p-1 click" id="credits" data-toggle="modal" data-target="#credits-modal">Credits</button>
+                            <button type="button" class="btn-block mx-auto p-1 click" id="highscores" data-bs-toggle="modal" data-bs-target="#highscores-modal">Highscores</button>
+                            <button type="button" class="btn-block mx-auto p-1 click" id="credits" data-bs-toggle="modal" data-bs-target="#credits-modal">Credits</button>
                         </div>
                     </div>
                 </div>
@@ -92,6 +92,97 @@
                             are preventing memory-related illnesses and enhancing other brain functions.
                         </p>
                     </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger click" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+     <!-- Highscores modal -->
+     <div class="modal fade" id="highscores-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h2>Highscores:</h2>
+                    <div id="easy-table">
+                        <p class="m-0">Level: easy</p>
+                        <table class="table text-center p-0">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Points</th>
+                                    <th scope="col">Turns</th>
+                                </tr>
+                            </thead>
+                            <tbody id="print-scores-easy"></tbody>
+                        </table>
+                    </div>
+                    <div id="hard-table">
+                        <p class="m-0">Level: hard</p>
+                        <table class="table text-center p-0">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Points</th>
+                                    <th scope="col">Turns</th>
+                                </tr>
+                            </thead>
+                            <tbody id="print-scores-hard"></tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-warning mr-auto click" id="clear">Clear scores</button>
+                    <button type="button" class="btn btn-danger click" id="close-high" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Credits modal -->
+    <div class="modal fade" id="credits-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h2>Developed by:</h2>
+                    <p class="m-0">Miro Frankovic</p>
+                    <div id="subscribe">
+                        <!-- <h1>Subscribe</h1> -->
+                        <span id="email-text">Subscribe to our newsletter to be the first to hear about new game releases!</span>
+                        <form id="email-subscribe">
+                            <label for="email">
+                            <span class="enter-email">Enter email address:</span></label>
+                            <input type="email" id="email" name="email" required />
+                            <input type="button" id="subscribe-submit" value="Subscribe!" />
+                      </form>
+                    </div>
+                    <h2>Credits and special thanks:</h2>
+                    <h4>Code:</h4>
+                    <ul>
+                        <li><a href="https://getbootstrap.com/" rel="noopener" target="_blank">Bootstrap</a> library mainly to make site responsive and implement simple style for margins, padding and elements alignment.</li>
+                        <li>
+                            <a href="https://www.w3schools.com/" rel="noopener" target="_blank">W3 Schools</a> referenced for code:
+                            <ul>
+                                <li>The Fisher Yates Method to sort an array.</li>
+                                <li>How to use local storage.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <h4>Media:</h4>
+                    <ul>
+                        <li>Pexeso for children menu: <a href="http://www.pexeso.net/children-s-toys/05CB4?lang=en" rel="noopener" target="_blank">Pexeso</a></li>
+                        <li>Cards figures images: <a href="https://www.cleanpng.com/" rel="noopener" target="_blank">cleanPNG</a></li>
+                        <li>Icons: <a href="https://fontawesome.com/" rel="noopener" target="_blank">Font Awesome</a></li>
+                        <li>Audio: <a href="https://www.zapsplat.com/" rel="noopener" target="_blank">Zapslat</a></li>
+                    </ul>
+                    <h4>Acknowledgments:</h4>
+                    <ul>
+                        <li><a href="https://codeinstitute.net" rel="noopener" target="_blank">Code Institute</a></li>
+                        <li><a href="https://stackoverflow.com/" rel="noopener" target="_blank">Stack Overflow</a></li>
+                        <li>Code Institute Slack Community.</li>
+                        <li>My mentor Guido Cecilio for guidance and support.</li>
+                        <li>My family and friends for their patience and honest critique throughout.</li>
+                    </ul>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger click" data-dismiss="modal">Close</button>
