Add pexeso function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h1 class="ml-3">
                             <strong>
                                 Hello!<br />
-                                Do you want to play a game?<br />
+                                Do you want to play a Pexeso?<br />
                                 Let's play!
                             </strong>
                         </h1>
@@ -45,7 +45,7 @@
         </div>  
      </section>
      <!-- My Game section -->
-     <section id="game-section">
+     <section id="display-game">
         <div class="container mt-5">
             <div class="row">
                 <div class="col-12 offset-md-3 col-md-6 offset-lg-4 col-lg-4">
