--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </h1>
                         <div class="row">
                             <div class="offset-1 col-5">
-                                <div id="main-image"><img src="/assets/images/pexeso.jpg" alt="Title image for game" /></div>
+                                <div id="main-image"><img src="assets/images/pexeso.jpg" alt="Title image for game" /></div>
                             </div>
                         </div>
                         <div class="options">
@@ -45,7 +45,7 @@
         </div>  
      </section>
      <!-- My Game section -->
-     <section id="display-game">
+     <section id="display-game" class="pexeso-class clearfix">
         <div class="container mt-5">
             <div class="row">
                 <div class="col-12 offset-md-3 col-md-6 offset-lg-4 col-lg-4">
@@ -54,7 +54,7 @@
                             <p class="float-left click" id="exit">Quit <i class="fas fa-door-open"></i></p>
                         </div>
                         <p id="points" class="text-center"><span class="pl-1">Points:</span><span class="pr-1"></span></p>
-                        <p id="level" class="float-left"><span class="pl-1">Level:</span><span class="pr-1"></span></p>
+                        <p id="chooseLevel" class="float-left"><span class="pl-1">Level:</span><span class="pr-1"></span></p>
                         <p id="time" class="float-right"><span class="pl-1">Time:</span><span class="pr-1"></span></p>
                         <div id="my-pexeso" class="clearfix text-center"></div>
                         <p id="counter" class="text-center mt-3"><span class="pl-1">Turn counter:</span><span class="pr-1"></span></p>
