Add cards to game

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <div class="row">
                 <div class="col-12 offset-md-3 col-md-6 offset-lg-4 col-lg-4">
                     <div id="my-game">
-                        <!-- <div>
-                            <p class="float-left click" id="exit">Quit <i class="fas fa-door-open"></i></p>
-                        </div> -->
+                        <div>
+                            <p class="float-left click" id="goBack">Go back </p>
+                        </div>
                         <p id="points" class="text-center"><span class="pl-1">Points:</span><span class="pr-1"></span></p>
                         <p id="chooseLevel" class="float-left"><span class="pl-1">Level:</span><span class="pr-1"></span></p>
                         <p id="time" class="float-right"><span class="pl-1">Time:</span><span class="pr-1"></span></p>
@@ -71,11 +71,11 @@
                     <h2>Select difficulty:</h2>
                     <div class="level d-inline-block text-center click" id="easy" data-bs-dismiss="modal">
                         <h3 class="mt-4">Easy</h3>
-                        <p>6 cards</p>
+                        <p>8 cards</p>
                     </div>
                     <div class="level d-inline-block text-center click" id="hard" data-bs-dismiss="modal">
                         <h3 class="mt-4">Hard</h3>
-                        <p>12 cards</p>
+                        <p>16 cards</p>
                     </div>
                 </div>
                 <div class="modal-footer">
