--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
      <!-- My Game section -->
      <section id="display-game" class="pexeso-class clearfix">
         <div class="container mt-5">
+            <div class="reset">
+                <button class="btn reset-btn">Reset <i class="fa fa-repeat"></i></button>
+            </div>
             <div class="row">
                 <div class="col-12 offset-md-3 col-md-6 offset-lg-4 col-lg-4">
                     <div id="my-game">
@@ -62,6 +65,7 @@
                 </div>
             </div>
         </div>
+        <ul class="deck"></ul>
     </section>
       <!-- Game my level modal -->
       <div class="modal fade" id="level-modal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
