Add random function for background color

--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
      </section>
      <!-- My Game section -->
      <section id="display-game" class="pexeso-class clearfix">
-        <div class="container mt-5">
+        <div class="container mt-6">
             <div class="reset">
                 <button class="btn reset-btn">Reset <i class="fa fa-repeat"></i></button>
+            </div>
+            <div class="changeColor">
+                <button id="buttonColor" class="btn change-btn">Change color <i class="fa fa-repeat"></i></button>
             </div>
             <div class="row">
                 <div class="col-12 offset-md-3 col-md-6 offset-lg-4 col-lg-4">
