--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="row">
                 <div class="col-12 offset-md-3 col-md-6 offset-lg-4 col-lg-4">
-                    <div id="my-game">
+                    <div id="cards-container">
                         <div>
                             <p class="float-left click" id="goBack">Go back </p>
                         </div>
