--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- Bootstrap CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
      <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
     <!-- CSS file -->
     <link rel="stylesheet" href="assets/css/css/style.css" />
-
     <title>Game</title>
 </head>
 <body>
-     <!-- Main menu section -->
-     <section id="main-menu-section">
+    <!-- Main menu section -->
+    <section id="main-menu-section">
         <div class="opaque-overlay">&nbsp;</div>
         <div class="container">
             <div class="row">
@@ -29,7 +28,7 @@
                             </strong>
                         </h1>
                         <div class="row">
-                            <div class="offset-1 col-5">
+                            <div class="offset-3 col-5">
                                 <div id="main-image"><img src="assets/images/pexeso.jpg" alt="Title image for game" /></div>
                             </div>
                         </div>
@@ -55,7 +54,7 @@
             </div>
             <div class="row">
                 <div class="col-12 offset-md-3 col-md-6 offset-lg-4 col-lg-4">
-                    <div id="cards-container">
+                    <div id="cards-container" class="board-grid">
                         <div>
                             <p class="float-left click" id="goBack">Go back </p>
                         </div>
@@ -64,6 +63,7 @@
                         <p id="time" class="float-right"><span class="pl-1">Time:</span><span class="pr-1"></span></p>
                         <div id="my-pexeso" class="clearfix text-center"></div>
                         <p id="counter" class="text-center mt-3"><span class="pl-1">Turn counter:</span><span class="pr-1"></span></p>
+                        <div id="grid-container"></div>
                     </div>
                 </div>
             </div>
@@ -223,5 +223,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
      <!-- JavaScript file -->
      <script src="assets/js/js/app.js"></script>
+    
 </body>
 </html>
