--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
     <!-- CSS file -->
     <link rel="stylesheet" href="assets/css/css/style.css" />
-    <title>Game</title>
+    <title>Pexeso Game</title>
 </head>
 <body>
     <!-- Main menu section -->
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="col-12 offset-md-2 col-md-8 offset-lg-3 col-lg-6">
                     <div id="main-menu" class="pb-3 pt-2">
-                        <h1 class="ml-3">
+                        <h1 class="ml-3 my-hello">
                             <strong>
                                 Hello!<br />
                                 Do you want to play a Pexeso?<br />
